# GEC6818

./: .clang-format  .gitignore  CMakeLists.txt  README.md  toolchain.cmake
apps/: CMakeLists.txt  album.c  csust.c  main.c  practice_lcd_draw.c  show_bmp.c  tester.c
notes/: cpuinfo.md  transfer.md
src/: CMakeLists.txt  album.c  album.h  game2048.c  game2048.h  order.c  order.h
util/: CMakeLists.txt  bmp.c  bmp.h  fonts.h  lcdctl.c  lcdctl.h  screen_touch.c  screen_touch.h  tcp_sender.c  tcp_sender.h  utility.c  utility.h
